2005-08-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/utils.rb:

	Removed a debug statement.

	* lib/alexandria/book_providers/z3950.rb:

	SUTRS decoding: remove trailing dots when squeeze whitespaces from the
	title.

	* lib/alexandria/macui/AddBookController.rb:

	When displaying the results of a search and multiple books with the same
	title, display the ISBN if the edition is not available. 

2005-08-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/MainController.rb:

	Refilter the model when a book has been modified and when the model is
	already filtered.

	* lib/alexandria/book_providers.rb:

	It is now possible to instantiate abstract providers by subclassing
	their classes.    

	* lib/alexandria/preferences.rb:

	Execute all calls to NSUserDefaults in the main thread.

	* lib/alexandria/book_providers/z3950.rb:

	Added builtin Library of Congress and British Library providers.

2005-07-28  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/macui/PreferencesController.rb,
	  lib/alexandria/macui/MainWindow.nib/info.nib,
	  lib/alexandria/macui/MainWindow.nib/keyedobjects.nib:

	- Set the preferences window title back to normal when leaving the
	  new provider sheet ;
	- Set the first preferences window tabview item as default.

2005-07-27  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/z3950.rb:

	Completed the Z39.50 provider.

2005-07-26  Laurent Sansonetti  <lrz@gnome.org>

	* alexandria.xcodeproj/project.pbxproj,
	  data/alexandria/icons/lookup.png,
	  lib/alexandria.rb,
	  lib/alexandria/book_providers.rb,
	  lib/alexandria/import_library.rb,
	  lib/alexandria/preferences.rb,
	  lib/alexandria/book_providers/amazon.rb,
	  lib/alexandria/book_providers/proxis.rb,
	  lib/alexandria/book_providers/z3950.rb,
	  lib/alexandria/macui/AddBookController.rb,
	  lib/alexandria/macui/PreferencesController.rb,
	  lib/alexandria/macui/main.m,
	  lib/alexandria/macui/main.rb,